Adjusted folder names

--- a/engine/src/CMakeLists.txt
+++ b/engine/src/CMakeLists.txt
@@ -1,14 +1,12 @@
-cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
-project(tloc_engine VERSION 0.1 LANGUAGES CXX)
-
 include(tloc_autogen.cmake)
+set(INCLUDE_DIR "include")
 
 set(TL_CORE
-  engine/tl_defines.h
+  ${INCLUDE_DIR}/tl_defines.h
   )
 set(TL_GFX
-  engine/tl_window.h
-  engine/tl_window.cpp
+  ${INCLUDE_DIR}/tl_window.h
+  ${INCLUDE_DIR}/tl_window.cpp
   )
 
 add_library(tl_engine
