--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: cpp
+compiler: g++
+
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+
+install:
+  - sudo apt-get install -qq g++-4.8
+  - export CXX="g++-4.8"
 
 addons:
   apt:
@@ -8,11 +17,8 @@ addons:
       - cmake
       - cmake-data
 
-compiler:
-  - clang
-  - gcc
-
-script:
+script: 
+  - "bash -c ./build.sh"
   - mkdir build
   - cd build
   - cmake .. && make
