--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,44 @@
+sudo: required
+dist: precise
 language: cpp
-compiler: g++
+
+matrix:
+  include:
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - george-edison55-precise-backports
+          packages:
+            - g++-5
+            - cmake
+            - cmake-data
+      env: COMPILER=g++-5
+    - compiler: clang
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+            - llvm-toolchain-precise-3.8
+            - george-edison55-precise-backports 
+          packages:
+            - clang-3.8
+            - cmake
+            - cmake-data
+      env: COMPILER=clang++-3.8
 
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
+  - sudo apt-get install -y libopencv-dev
 
-install:
-  - sudo apt-get install -qq g++-4.8
-  - export CXX="g++-4.8"
-
-addons:
-  apt:
-    sources:
-      - george-edison55-precise-backports # cmake 3.2.3 / doxygen 1.8.3
-    packages:
-      - cmake
-      - cmake-data
-
-script: 
-  - "bash -c ./build.sh"
+script:
   - mkdir build
   - cd build
-  - cmake .. && make
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - cd ..
+  - cd game
+  - mkdir build
+  - cd build
+  - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
+  - ctest
