--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - cd build
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
   - cd ..
-  - cd game
+  - cd engine
   - mkdir build
   - cd build
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .. && make
