--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ matrix:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y libopencv-dev
+  - sudo apt-get install -y 
+  - sudo apt-get install -y libglew-dev
 
 script:
   - mkdir build
