No longer compiling tools in bgfx, there seems to be an issue with bgdx.cmake and building with tools but without examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ ExternalProject_Add(bgfx
   GIT_TAG "master"
 
   SOURCE_DIR "${CMAKE_SOURCE_DIR}/dep/bgfx"
-  CMAKE_ARGS -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER} -DBGFX_BUILD_EXAMPLES=OFF -DCMAKE_INSTALL_PREFIX=${CMAKE_SOURCE_DIR}/install/bgfx/ -DCMAKE_DEBUG_POSTFIX=_d
+  CMAKE_ARGS -DCMAKE_CXX_COMPILER:FILEPATH=${CMAKE_CXX_COMPILER} -DBGFX_BUILD_EXAMPLES=OFF -DBGFX_BUILD_TOOLS=OFF -DCMAKE_INSTALL_PREFIX=${CMAKE_SOURCE_DIR}/install/bgfx/ -DCMAKE_DEBUG_POSTFIX=_d
 
   TEST_COMMAND ""
   )
