--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(tloc_engine VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 11)
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
 # These variables are usually set by the super build
@@ -36,3 +38,5 @@ add_subdirectory(src)
 
 # Install commands
 install(DIRECTORY "src/include/" DESTINATION "include/tloc")
+
+include(./build_ycm_config.cmake)
